packages/related/test/tests/test_plan_execution/logs/snapshots/browser/error_in_script.spec.html.txt
------------ 2 executions to run ------------
1 with chromium (chromium@120.0.6099.28)
1 with firefox (firefox@119.0)
---------------------------------------------

✖ error_in_script.spec.html [chromium/<mock>/<mock>] 1/2 (1 failed, 1 remaining)
--------------- error ----------------
9  |   <body>
10 |     <script>
11 |       throw new Error("here");
                      ^
Error: here
  at file:///Users/d.maillard/dev/jsenv/jsenv-core/packages/related/test/tests/test_plan_execution/logs/client/error_in_script.spec.html:11:18
--------------------------------------
✖ error_in_script.spec.html [firefox/<mock>] 2/2 (all failed)
--------------- error ----------------
9  |   <body>
10 |     <script>
11 |       throw new Error("here");
                      ^
Error: here
--------------------------------------

------------------ summary ------------------
2 executions: all failed
duration: <mock>
---------------------------------------------